# hmmlearn

./: .appveyor.yml  .coveragerc  .doc-requirements.txt  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  exampleswikipeida_bob_alice_example_using_python3.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml
bench/: speed.py
continuous_integration/: install.sh  test_script.sh
continuous_integration/appveyor/: requirements.txt
continuous_integration/travis/: install.sh  test_script.sh
doc/: .gitignore  Makefile  api.rst  classes.rst  conf.py  hmm.rst  index.rst  make.bat  requirements.txt  tutorial.rst
doc/modules/: classes.rst~  hmm.rst
doc/source/: GMMHMM.rst  api.rst  conf.py  index.rst  tutorial.rst
doc/source/_static/: hide_some_gallery_elements.css
doc/themes/scikit-learn/: layout.html
examples/: README.txt  __init__.py  benchmark.py  multinomial_hmm_example.py  plot_casino_example.py  plot_gaussian_model_selection.py  plot_hmm_sampling.ipynb  plot_hmm_sampling.py  plot_hmm_sampling_and_decoding.py  plot_hmm_stock_analysis.py  plot_multinomial_hmm.py  plot_poisson_hmm.py  plot_variational_inference.py  quotes_api.py
ext/: _hmmc.cpp
hmmlearn/: __init__.py  _hmmc.c  _hmmc.pyx  _hmmc.pyxbld  base.py  fhmmc.c  fhmmc.pyx  hmm.py  hmmc.c  hmmc.pyx  setup.py  stats.py  utils.py
hmmlearn/tests/: __init__.py  _test_common.py  test_base.py  test_bug.py  test_gaussian_hmm.py  test_gmm_hmm.py  test_gmm_hmm_new.py  test_hmm.py  test_multinomial_hmm.py  test_utils.py
hmmlearn/utils/: fixes.py
lib/hmmlearn/: .gitignore  __init__.py  _emissions.py  _hmmc.pyx  _kl_divergence.py  _utils.py  base.py  hmm.py  kl_divergence.py  stats.py  utils.py  vhmm.py
lib/hmmlearn/tests/: __init__.py  conftest.py  test_base.py  test_categorical_hmm.py  test_gaussian_hmm.py  (+11 more)
scripts/: benchmark.py
src/: _hmmc.cpp
src/hmmlearn/: __init__.py  _emissions.py  _utils.py  base.py  hmm.py  stats.py  vhmm.py
(+7 files in other folders)
